--- a/css/tck.css
+++ b/css/tck.css
@@ -78,6 +78,7 @@ body{
     margin-left: auto;
     top: 20px;
     height: 400px;
+    border-top: 6px solid var(--color3);
 }
 
 .rulesPage{
@@ -100,8 +101,8 @@ body{
 
 .navbar {
     font-size: 18px;
-    background-color:var(--damp-grass);
-    border: 1px solid rgba(0, 0, 0, 0.2);
+    background-color:var(--mcgray);
+    border-bottom: 4px solid var(--color3);
     padding-bottom: 10px;
 }
 
@@ -258,7 +259,7 @@ body{
     margin-left: auto;
     margin-right: auto;
     margin-top: 20px;
-    width: 50%;
+    width: 80%;
     overflow: hidden;
     white-space: nowrap;
 }
@@ -372,6 +373,7 @@ body{
 
 .TextUnderline{
     text-decoration: underline !important;
+    text-decoration-color: var(--color5) !important;
 }
 
 .PercentRight{
